--- a/app/src/main/res/layout/detail_main.xml
+++ b/app/src/main/res/layout/detail_main.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#000000">
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:id="@+id/movie_detail_view"
     android:background="#000000">
 
@@ -55,3 +62,4 @@
         android:padding="1dp"
         android:textColor="#ffffff" />
 </RelativeLayout>
+</ScrollView>
