--- a/app/src/main/res/layout/detail_main.xml
+++ b/app/src/main/res/layout/detail_main.xml
@@ -1,65 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#000000"
+    android:fillViewport="true"
+    android:id="@+id/scrolly">
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
     android:background="#000000">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:id="@+id/movie_detail_view"
     android:background="#000000">
-
 
     <ImageView
         android:layout_width="154dp"
         android:layout_height="231dp"
         android:id="@+id/detail_poster"
-        android:layout_centerHorizontal="true"
         android:minWidth="285dp"
-        android:padding="1dp"/>
+        android:padding="1dp"
+        android:background="#000100" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="0dip"
+        android:layout_weight="1"
+        android:layout_height="fill_parent">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="TITLE"
         android:id="@+id/detail_title"
-        android:layout_below="@+id/detail_poster"
-        android:layout_centerHorizontal="true"
         android:padding="1dp"
-        android:textColor="#ffffff" />
-    <TextView
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="RATING"
         android:id="@+id/detail_rating"
-        android:layout_below="@+id/detail_title"
-        android:layout_centerHorizontal="true"
         android:padding="1dp"
-        android:textColor="#ffffff" />
-    <TextView
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="OVERVIEW"
-        android:id="@+id/detail_plot"
-        android:layout_below="@+id/detail_rating"
-        android:layout_centerHorizontal="true"
-        android:padding="1dp"
-        android:textColor="#ffffff" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content" />
+        <TextView
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="RELEASE DATE"
         android:id="@+id/detail_release_date"
-        android:layout_below="@+id/detail_plot"
-        android:layout_centerHorizontal="true"
         android:padding="1dp"
-        android:textColor="#ffffff" />
-</RelativeLayout>
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add to Favorites"
+            android:id="@+id/favoriteButton" />
+    </LinearLayout>
+</LinearLayout>
+        <!--<View style="@style/Divider"-->
+            <!--android:layout_below="@id/movie_detail_view"-->
+            <!--android:id="@+id/divider1"/>-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="OVERVIEW"
+            android:id="@+id/detail_plot"
+            android:layout_below="@id/movie_detail_view"
+            android:padding="1dp"
+            android:textColor="#ffffff" />
+        <View style="@style/Divider"
+            android:layout_below="@id/detail_plot"
+            android:id="@+id/divider2"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Trailers"
+            android:id="@+id/textview_trailers"
+            android:layout_below="@id/divider2"
+            android:padding="1dp"
+            android:textColor="#ffffff" />
+        <com.udanano.popularmoviesretry.NestedListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/textview_trailers"
+            android:id="@+id/listview_trailers"
+            android:textColor="#ffffff"
+            android:background="#000000">
+        </com.udanano.popularmoviesretry.NestedListView>
+        <View style="@style/Divider"
+            android:layout_below="@id/listview_trailers"
+            android:id="@+id/divider3"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Reviews"
+            android:id="@+id/textview_reviews"
+            android:layout_below="@id/divider3"
+            android:padding="1dp"
+            android:textColor="#ffffff" />
+        <com.udanano.popularmoviesretry.NestedListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/textview_reviews"
+            android:id="@+id/listview_reviews"
+            android:textColor="#ffffff"
+            android:background="#000000">
+        </com.udanano.popularmoviesretry.NestedListView>
+    </RelativeLayout>
 </ScrollView>
