--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,10 +3,12 @@
     <string-array name="pref_sort_options">
         <item>@string/pref_units_label_popular</item>
         <item>@string/pref_units_label_rating</item>
+        <item>@string/pref_units_label_favorites</item>
     </string-array>
 
     <string-array name="pref_sort_values">
         <item>@string/pref_popular</item>
         <item>@string/pref_rating</item>
+        <item>@string/pref_favorites</item>
     </string-array>
 </resources>
