--- a/app/src/main/res/layout/detail_main.xml
+++ b/app/src/main/res/layout/detail_main.xml
@@ -92,7 +92,7 @@
             android:textColor="#ffffff" />
         <com.udanano.popularmoviesretry.NestedListView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/textview_trailers"
             android:id="@+id/listview_trailers"
             android:textColor="#ffffff"
@@ -102,18 +102,18 @@
             android:layout_below="@id/listview_trailers"
             android:id="@+id/divider3"/>
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Reviews"
             android:id="@+id/textview_reviews"
-            android:layout_below="@id/divider3"
+            android:layout_below="@id/listview_trailers"
             android:padding="1dp"
             android:textColor="#ffffff" />
         <com.udanano.popularmoviesretry.NestedListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/textview_reviews"
+            android:layout_below="@id/listview_trailers"
             android:id="@+id/listview_reviews"
             android:textColor="#ffffff"
             android:background="#000000">
