fixed rotate crash yay

--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -9,7 +9,7 @@
     android:screenOrientation="landscape">
 
 
-    <fragment
+    <FrameLayout
         android:name="com.udanano.popularmoviesretry.PostersFragment"
         android:layout_width="match_parent"
         android:layout_weight="1"
